--- a/index.html
+++ b/index.html
@@ -9,34 +9,36 @@
     <link rel="icon" type="image/png" href="assets/LogoLeanber.png">
 </head>
 <body>
-    <header class="header">
-            <figure class="logo">
-                <img class="icon-logo" src="assets/Logo.png" alt="Logo de https://leanber.com">
-                <img class="icon-nombre" src="assets/Nombre Leanber.png" alt="Nombre de https://leanber.com">
-            </figure>
-            <nav class="menu">
-                <ol>
-                    <li>
-                        <a href="#Inicio">Inicio</a>
-                    </li>
-                    <li>
-                        <a href="#Comunidad">Comunidad</a>
-                    </li>
-                    <li>
-                        <a href="#Servicios">Servicios</a>
-                    </li>
-                    <li>
-                        <a href="#Proyectos">Proyectos</a>
-                    </li>
-                    <li>
-                        <a href="#Contacto">Contacto</a>
-                    </li>
-                </ol>
-            </nav>
-    </header>
+    <div class="navbar">
+        <header class="header">
+                <figure class="logo">
+                    <img class="icon-logo" src="assets/Logo.png" alt="Logo de https://leanber.com">
+                    <img class="icon-nombre" src="assets/Nombre Leanber.png" alt="Nombre de https://leanber.com">
+                </figure>
+                <nav class="menu">
+                    <ol>
+                        <li>
+                            <a href="#Inicio">Inicio</a>
+                        </li>
+                        <li>
+                            <a href="#Comunidad">Comunidad</a>
+                        </li>
+                        <li>
+                            <a href="#Servicios">Servicios</a>
+                        </li>
+                        <li>
+                            <a href="#Proyectos">Proyectos</a>
+                        </li>
+                        <li>
+                            <a href="#Contacto">Contacto</a>
+                        </li>
+                    </ol>
+                </nav>
+        </header>
+    </div>
     <section class="hero" id="Inicio">
         <div class="hero-text">
-            <h1>Sé el cambio innovador<br> 
+            <h1>Sé el cambio innovador que<br> 
                 quieres ver en el mundo</h1>
             <h4>Cuenta con nosotros para impactar<br>
                 positivamente al mundo</h4>
@@ -47,7 +49,7 @@
         </figure>
     </section>
     <section class="comunidad" id="Comunidad">
-        <div class="container-comunidad">
+        <div class="item container-comunidad">
             <p class="comunidad-parrafo">Entendemos la necesidad latente por innovar y desarrollar
                 tecnoloías en LATAM. Por ese motivo nos enfocamos a crear
                 ideas disruptivas en código y con estrategías de alto impacto
@@ -55,21 +57,23 @@
                 oportunidades en este mundo hiperconectado.
             </p>
         </div>
-    <section class="comunidad-detail">
-        <div class="comunidad-text">
-            <h3>En equipo se llega más lejos</h3>
-            <p>En la comunidad Leanber tenemos el gen del aprendizaje infinito, que nos permite traer
-                a la mesa nuevas propuestas pata todos los socios, aportando entre todos nuevas
-                alternativas. Nuestros eventos mensuales donde daremos a conocer nuevos Servicios
-                tecnologicos. 
-            </p>
+<!--     <section class="comunidad-detail"> -->
+        <div class="item comunidad-text">
+            <div class="comunidad-detail">
+                <h3>En equipo se llega más lejos</h3>
+                <p>En la comunidad Leanber tenemos el gen del aprendizaje infinito, que nos permite traer
+                    a la mesa nuevas propuestas para todos los socios, aportando entre todos nuevas
+                    alternativas. Nuestros eventos mensuales donde daremos a conocer nuevos Servicios
+                    tecnologicos. 
+                </p>
+            </div>
         </div>
-        <div class="comunidad-img">
-            <figure class="comunidad-img">
-                <img src="assets/Business_PNG.png" width="550px" alt="imagen comunidad">
+        <div class="item comunidad-img">
+            <figure>
+                <img class="comunidad-imgb" src="assets/Business_PNG.png" width="550px" alt="imagen comunidad">
             </figure>
         </div>
-    </section>
+    <!-- </section> -->
     </section>
     <section class="servicios" id="Servicios">
         <h2>Tus ideas disruptivas e innovadoras<br>
