--- a/index.html
+++ b/index.html
@@ -75,24 +75,101 @@
         </div>
     <!-- </section> -->
     </section>
-    <section class="servicios" id="Servicios">
+    <div class="servicios" id="Servicios">
         <h2>Tus ideas disruptivas e innovadoras<br>
             ahora en código</h2>
-        <article class="servicios-article">
-          <h3>Tiendas virtuales para potenciar<br>
-              Tus ventas online</h3>
-        </article>
+        <section class="servicios-carousel">
+            <div class="servicios-carousel-items">
+                <div class="servicios-item">
+                    <article class="servicios-article">
+                        <h3>Tiendas virtuales para potenciar<br>
+                            tus ventas online.</h3>
+                      </article>
+                      <article class="servicios-article">
+                          <p><strong>Única para productos únicos</strong><br>
+                            Es momento de introducirte al mercado por<br>
+                            excelencia de las nuevas generaciones y<br>
+                            adelantarte a tu competencia para crear<br>
+                            comunidad.</p>
+                      </article>
+                </div>
+                <div class="servicios-item">
+                    <div class="servicios-container-img">
+                        <img src="assets/Tienda.png" alt="foto" width="300px">
+                    </div>
+                </div>
+                <div class="servicios-item">
+                    <article class="servicios-article">
+                        <h3>Landing Pages.</h3>
+                      </article>
+                      <article class="servicios-article">
+                          <p><strong>La presencia digital es tu cara al mundo de hoy</strong><br>
+                            No se trata de tener una simpre página web<br>
+                            Para tener presencia; ahora se necesita dar<br>
+                            valor dentro de tu contenido sin necesidad<br>
+                            de afectar tus ventas. Los algoritmos serán<br>
+                            tus mejores aliados.</p>
+                      </article>
+                </div>
+                <div class="servicios-item">
+                    <div class="servicios-container-img">
+                        <img src="assets/Icon Leanber Landing.png" alt="foto" width="500px">
+                    </div>
+                </div>
+                <div class="servicios-item">
+                    <article class="servicios-article">
+                        <h3>Algoritmos para el analisís de data</h3>
+                      </article>
+                      <article class="servicios-article">
+                          <p><strong>Automatizar y delegar para un crecimiento exponencial.</strong><br>
+                            Dejemos de utilizar métricas banidosas que<br>
+                            frenan el crecimiento de nuestra empresa y<br>
+                            digitalecemos una tarea tan importante para<br>
+                            mejorar nuestro rendimiento sin necesidad de<br>
+                            descuidar tareas importantes.</p>
+                      </article>
+                </div>
+                <div class="servicios-item">
+                    <div class="servicios-container-img">
+                        <img src="assets/Icon 3 Leanber Landing.png" alt="foto" width="350px">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <section class="proyectos" id="Proyectos">
+        <div class="proyectos-container">
+            <h2>Nuestros últimos proyectos</h2>
+        </div>
+        <div class="proyectos-proyecto1">
+            <p>Proyecto1</p>
+            <div class="proyectos-img1">
+                <img src="./assets/tucalcetin.JPG" alt="e-commerce">
+            </div>
+        </div>
+        <div class="proyectos-proyecto2">
+            <p>Proyecto2</p>
+            <div class="proyectos-img2">
+                <img src="./assets/restaurante.png" alt="Landing">
+            </div>
+        </div>
+        <div class="proyectos-proyecto3">
+            <p>Proyecto3</p>
+        </div>
     </section>
-    <section id="Proyectos">Proyectos</section>
-    <section id="Contacto">
-        <form action="">
-            <h3>Unete a nuestra comunidad</h3>
+    <section class="contacto" id="Contacto">
+        <form class="contacto-title" action="">
+            <h3>Cuentanos ¿qué te gustaría que construyamos juntos?</h3>
         </form>
+        <div class="contacto-buttons">
+            <button class="contacto-button1">Un proyecto innovador</button>
+            <button class="contacto-button2">Un proyecto disruptivo</button>
+        </div>
     </section>
     <section class="footer">
         <footer>
             <div class="footer-email">
-                <label for="email">Recibe información de nuestros eventos tecnológicos</label>
+                <label class="footer-email-text" for="email">Recibe información de nuestros eventos tecnológicos</label>
                 <input type="datetime" placeholder="Dejanos tu email" id="email">
                 <button>Enviar</button>
             </div>
