Este es el cuarto commit de Landing Leanber

--- a/index.html
+++ b/index.html
@@ -142,19 +142,52 @@
             <h2>Nuestros últimos proyectos</h2>
         </div>
         <div class="proyectos-proyecto1">
-            <p>Proyecto1</p>
+            <div class="proyectos-container-p">
+                <p>E-Commerce para TuCalcetin</p>
+            </div>
             <div class="proyectos-img1">
                 <img src="./assets/tucalcetin.JPG" alt="e-commerce">
             </div>
+            <div class="proyectos-tarjetas">
+                <p>"Inicie mi negocio de calcetines por<br>
+                    Instagram pero tuve que migrar a mi<br>
+                    propia tienda online por la demanda.<br>
+                    La mejorar desición que puede tomar<br>
+                    para mi negocio."<br>
+                    <small>TuCalcetin</small></p>
+            </div>
         </div>
         <div class="proyectos-proyecto2">
-            <p>Proyecto2</p>
+            <div class="proyectos-container-p">
+                <p>Landing page para Ringo</p>
+            </div>
             <div class="proyectos-img2">
                 <img src="./assets/restaurante.png" alt="Landing">
             </div>
+            <div class="proyectos-tarjetas">
+                <p>"Nuestro sitema digital necesitaba de<br>
+                    presencia única, con la innovación que<br>
+                    nos caracterisa. Fue ahí donde optamos<br>
+                    por colaborar para desarrollar nuestra<br>
+                    Landing Page."<br>
+                    <small>Ringo</small></p>
+            </div>
         </div>
         <div class="proyectos-proyecto3">
-            <p>Proyecto3</p>
+            <div class="proyectos-container-p">
+                <p>UX/UI de App móvil Ringo</p>
+            </div>
+            <div class="proyectos-img3">
+                <img src="./assets/diseño app.png" alt="diseñoApp">
+            </div>
+            <div class="proyectos-tarjetas">
+                <p>"La interacción de interface y mucho<br>
+                    más importante, la interacción con<br>
+                    el usuario; son muy importantes para<br>
+                    la aceptación de tu productos en el<br>
+                    mercado."<br>
+                    <small>App Ringo</small></p>
+            </div>
         </div>
     </section>
     <section class="contacto" id="Contacto">
@@ -170,11 +203,11 @@
         <footer>
             <div class="footer-email">
                 <label class="footer-email-text" for="email">Recibe información de nuestros eventos tecnológicos</label>
-                <input type="datetime" placeholder="Dejanos tu email" id="email">
+                <input type="datetime" placeholder="Compartenos tu email" id="email">
                 <button>Enviar</button>
             </div>
             <div class="contacto-img">
-                <img src="/assets/Logo.png" alt="">
+                <img src="./assets/Logo.png" alt="">
             </div>
         </footer>
     </section>
