último commit de landing page 4/3/2020

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       </article>
                       <article class="servicios-article">
                           <p><strong>La presencia digital es tu cara al mundo de hoy</strong><br>
-                            No se trata de tener una simpre página web<br>
+                            No se trata de tener una simple página web<br>
                             Para tener presencia; ahora se necesita dar<br>
                             valor dentro de tu contenido sin necesidad<br>
                             de afectar tus ventas. Los algoritmos serán<br>
@@ -143,10 +143,10 @@
         </div>
         <div class="proyectos-proyecto1">
             <div class="proyectos-container-p">
-                <p>E-Commerce para TuCalcetin</p>
+                <p>E-Commerce para Tu Calcetín</p>
             </div>
             <div class="proyectos-img1">
-                <img src="./assets/tucalcetin.JPG" alt="e-commerce">
+                <img src="./assets/TuCalcetin_store.png" alt="e-commerce">
             </div>
             <div class="proyectos-tarjetas">
                 <p>"Inicie mi negocio de calcetines por<br>
@@ -175,18 +175,18 @@
         </div>
         <div class="proyectos-proyecto3">
             <div class="proyectos-container-p">
-                <p>UX/UI de App móvil Ringo</p>
+                <p>UX/UI de App Galery</p>
             </div>
             <div class="proyectos-img3">
-                <img src="./assets/diseño app.png" alt="diseñoApp">
+                <img src="./assets/diseño_app.png" alt="diseñoApp">
             </div>
             <div class="proyectos-tarjetas">
                 <p>"La interacción de interface y mucho<br>
                     más importante, la interacción con<br>
-                    el usuario; son muy importantes para<br>
-                    la aceptación de tu productos en el<br>
+                    el usuario; son claves para una mayor<br>
+                    aceptación de tu productos en el<br>
                     mercado."<br>
-                    <small>App Ringo</small></p>
+                    <small>App Galery</small></p>
             </div>
         </div>
     </section>
@@ -206,10 +206,49 @@
                 <input type="datetime" placeholder="Compartenos tu email" id="email">
                 <button>Enviar</button>
             </div>
-            <div class="contacto-img">
-                <img src="./assets/Logo.png" alt="">
-            </div>
         </footer>
+            <div class="contacto-details">
+                <div class="contacto-img">
+                    <img class="contacto-img-logo" src="./assets/Logo.png" alt="">
+                    <img class="contacto-img-nombre" src="./assets/Nombre Leanber.png" alt="nombre-img">
+                    <div class="footer-follow">
+                        <p>Follow us:</p>
+                    </div> 
+                </div>
+                <div class="contacto-links">
+                    <p>Información</p>
+                </div>
+                <div class="contacto-links">
+                    <p>Links</p>
+                </div>
+                <div class="contacto-links">
+                    <p>Soporte</p>
+                </div>
+                <div class="contacto-img-redes">
+                    <a href="https://www.facebook.com/LeanberOficial" class="contacto-link facebook"></a>
+                    <a href="https://www.instagram.com/leanber_oficial" class="contacto-link instagram"></a>
+                    <a href="https://twitter.com/home" class="contacto-link twitter"></a>
+                </div>
+                <div class="contacto-details2">
+                    <p class="contacto-p-links1">
+                        Inicios<br>
+                        Comunidad<br>
+                        Servicios<br>
+                        Proyectos<br>
+                        Contacto
+                    </p>
+                </div>
+                <div class="contacto-details2">
+                    <p class="contacto-p-links2">
+                        Aviso de privacidad
+                    </p>
+                </div>
+                <div class="contacto-details2">
+                    <p class="contacto-p-links3">
+                       (+52) 312-132-58-57
+                    </p>
+                </div>
+            </div>
     </section>
 </body>
 </html>
