Integración de link para vincular botones call to action a whatsapp business

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
                 quieres ver en el mundo</h1>
             <h4>Cuenta con nosotros para impactar<br>
                 positivamente al mundo</h4>
-            <button>Colaboremos</button>
+            <button><a href="#Contacto">Colaboremos</a></button>
+            <div class="hero-img-redes">
+                <a href="https://www.facebook.com/LeanberOficial" class="contacto-link facebook"></a>
+                <a href="https://www.instagram.com/leanber_oficial" class="contacto-link instagram"></a>
+                <a href="https://twitter.com/home" class="contacto-link twitter"></a>
+            </div>
         </div>
         <figure class="hero-img">
             <img class="hero-img-serv" src="assets/SERV.png" width="550px" alt="imagen principal">
@@ -195,8 +200,8 @@
             <h3>Cuentanos ¿qué te gustaría que construyamos juntos?</h3>
         </form>
         <div class="contacto-buttons">
-            <button class="contacto-button1">Un proyecto innovador</button>
-            <button class="contacto-button2">Un proyecto disruptivo</button>
+            <button class="contacto-button1"><a href="whatsapp://send?text=Hola,%20qué%20tal%20equipo%20Leanber%20me%20interesa%20colaborar%20en%20un%20proyecto%20innovador%20juntos&phone=+52 1 312 132 5857&abid=+52 1 312 132 5857">proyecto innovador</a></button>
+            <button class="contacto-button2"><a href="whatsapp://send?text=Hola,%20qué%20tal%20equipo%20Leanber%20me%20interesa%20colaborar%20en%20un%20proyecto%20disruptivo%20juntos&phone=+52 1 312 132 5857&abid=+52 1 312 132 5857">proyecto disruptivo</a></button>
         </div>
     </section>
     <section class="footer">
