Commint con correcciones ortograficas y delineado de textos principales

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     <section class="comunidad" id="Comunidad">
         <div class="item container-comunidad">
             <p class="comunidad-parrafo">Entendemos la necesidad latente por innovar y desarrollar
-                tecnoloías en LATAM. Por ese motivo nos enfocamos a crear
-                ideas disruptivas en código y con estrategías de alto impacto
-                para que nuestros socios creen un futuro con mayores
+                tecnologías en LATAM. Por ese motivo nos enfocamos a crear
+                ideas disruptivas en código y con estrategias de alto impacto
+                para que ustedes nuestros colaboradores creen un futuro con mayores
                 oportunidades en este mundo hiperconectado.
             </p>
         </div>
@@ -69,7 +69,7 @@
                 <p>En la comunidad Leanber tenemos el gen del aprendizaje infinito, que nos permite traer
                     a la mesa nuevas propuestas para todos los socios, aportando entre todos nuevas
                     alternativas. Nuestros eventos mensuales donde daremos a conocer nuevos Servicios
-                    tecnologicos. 
+                    tecnológicos. 
                 </p>
             </div>
         </div>
@@ -81,8 +81,10 @@
     <!-- </section> -->
     </section>
     <div class="servicios" id="Servicios">
-        <h2>Tus ideas disruptivas e innovadoras<br>
-            ahora en código</h2>
+      <div class="servicios-title">
+          <h2>Tus ideas disruptivas e innovadoras<br>
+              ahora en código</h2>
+      </div>
         <section class="servicios-carousel">
             <div class="servicios-carousel-items">
                 <div class="servicios-item">
@@ -92,10 +94,10 @@
                       </article>
                       <article class="servicios-article">
                           <p><strong>Única para productos únicos</strong><br>
-                            Es momento de introducirte al mercado por<br>
-                            excelencia de las nuevas generaciones y<br>
-                            adelantarte a tu competencia para crear<br>
-                            comunidad.</p>
+                            Es momento de introducirte al mercado de<br>
+                            consumo por excelencia de las nuevas<br>
+                            generaciones y adelantarte a tu competencia<br>
+                            para crear comunidad.</p>
                       </article>
                 </div>
                 <div class="servicios-item">
@@ -110,7 +112,7 @@
                       <article class="servicios-article">
                           <p><strong>La presencia digital es tu cara al mundo de hoy</strong><br>
                             No se trata de tener una simple página web<br>
-                            Para tener presencia; ahora se necesita dar<br>
+                            para tener presencia. Ahora se necesita dar<br>
                             valor dentro de tu contenido sin necesidad<br>
                             de afectar tus ventas. Los algoritmos serán<br>
                             tus mejores aliados.</p>
@@ -123,15 +125,15 @@
                 </div>
                 <div class="servicios-item">
                     <article class="servicios-article">
-                        <h3>Algoritmos para el analisís de data</h3>
+                        <h3>Algoritmos para el análisis de data</h3>
                       </article>
                       <article class="servicios-article">
                           <p><strong>Automatizar y delegar para un crecimiento exponencial.</strong><br>
-                            Dejemos de utilizar métricas banidosas que<br>
+                            Dejemos de utilizar métricas vanidosas que<br>
                             frenan el crecimiento de nuestra empresa y<br>
-                            digitalecemos una tarea tan importante para<br>
-                            mejorar nuestro rendimiento sin necesidad de<br>
-                            descuidar tareas importantes.</p>
+                            digitalecemos una tarea tan importante como<br>
+                            la filtración de datos útiles y claves para<br>
+                            nuestro crecimiento.</p>
                       </article>
                 </div>
                 <div class="servicios-item">
@@ -157,7 +159,7 @@
                 <p>"Inicie mi negocio de calcetines por<br>
                     Instagram pero tuve que migrar a mi<br>
                     propia tienda online por la demanda.<br>
-                    La mejorar desición que puede tomar<br>
+                    La mejor desición que puede tomar<br>
                     para mi negocio."<br>
                     <small>TuCalcetin</small></p>
             </div>
@@ -172,7 +174,7 @@
             <div class="proyectos-tarjetas">
                 <p>"Nuestro sitema digital necesitaba de<br>
                     presencia única, con la innovación que<br>
-                    nos caracterisa. Fue ahí donde optamos<br>
+                    nos caracteriza. Fue ahí donde optamos<br>
                     por colaborar para desarrollar nuestra<br>
                     Landing Page."<br>
                     <small>Ringo</small></p>
@@ -197,7 +199,7 @@
     </section>
     <section class="contacto" id="Contacto">
         <form class="contacto-title" action="">
-            <h3>Cuentanos ¿qué te gustaría que construyamos juntos?</h3>
+            <h3>Cuéntanos ¿qué te gustaría que construyamos juntos?</h3>
         </form>
         <div class="contacto-buttons">
             <button class="contacto-button1"><a href="whatsapp://send?text=Hola,%20qué%20tal%20equipo%20Leanber%20me%20interesa%20colaborar%20en%20un%20proyecto%20innovador%20juntos&phone=+52 1 312 132 5857&abid=+52 1 312 132 5857">proyecto innovador</a></button>
@@ -236,7 +238,7 @@
                 </div>
                 <div class="contacto-details2">
                     <p class="contacto-p-links1">
-                        Inicios<br>
+                        Inicio<br>
                         Comunidad<br>
                         Servicios<br>
                         Proyectos<br>
