Actualización de mensaje para Whatsapp y cambio de un place holder para colocar tu email por un botón vinculado a whatsapp

--- a/index.html
+++ b/index.html
@@ -202,16 +202,16 @@
             <h3>Cuéntanos ¿qué te gustaría que construyamos juntos?</h3>
         </form>
         <div class="contacto-buttons">
-            <button class="contacto-button1"><a href="whatsapp://send?text=Hola,%20qué%20tal%20equipo%20Leanber%20me%20interesa%20colaborar%20en%20un%20proyecto%20innovador%20juntos&phone=+52 1 312 132 5857&abid=+52 1 312 132 5857">proyecto innovador</a></button>
-            <button class="contacto-button2"><a href="whatsapp://send?text=Hola,%20qué%20tal%20equipo%20Leanber%20me%20interesa%20colaborar%20en%20un%20proyecto%20disruptivo%20juntos&phone=+52 1 312 132 5857&abid=+52 1 312 132 5857">proyecto disruptivo</a></button>
+            <button class="contacto-button1"><a href="whatsapp://send?text=Hola,%20qué%20tal%20equipo%20Leanber,%20me%20interesa%20colaborar%20en%20un%20proyecto%20innovador&phone=+52 1 312 132 5857&abid=+52 1 312 132 5857">proyecto innovador</a></button>
+            <button class="contacto-button2"><a href="whatsapp://send?text=Hola,%20qué%20tal%20equipo%20Leanber,%20me%20interesa%20colaborar%20en%20un%20proyecto%20disruptivo&phone=+52 1 312 132 5857&abid=+52 1 312 132 5857">proyecto disruptivo</a></button>
         </div>
     </section>
     <section class="footer">
         <footer>
             <div class="footer-email">
                 <label class="footer-email-text" for="email">Recibe información de nuestros eventos tecnológicos</label>
-                <input type="datetime" placeholder="Compartenos tu email" id="email">
-                <button>Enviar</button>
+                <!-- <input type="datetime" placeholder="Compartenos tu email" id="email"> -->
+                <button class="footer-button"><a href="whatsapp://send?text=Hola,%20qué%20tal%20equipo%20Leanber,%20me%20interesa%20recibir%20información%20sobre%20sus%20eventos%20tecnológicos&phone=+52 1 312 132 5857&abid=+52 1 312 132 5857">Envíanos un mensaje</a></button>
             </div>
         </footer>
             <div class="contacto-details">
