--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="hero-img-redes">
                 <a href="https://www.facebook.com/LeanberOficial" class="contacto-link facebook"></a>
                 <a href="https://www.instagram.com/leanber_oficial" class="contacto-link instagram"></a>
-                <a href="https://twitter.com/home" class="contacto-link twitter"></a>
+                <a href="https://twitter.com/LeanberOficial" class="contacto-link twitter"></a>
             </div>
         </div>
         <figure class="hero-img">
@@ -145,6 +145,34 @@
             </div>
         </section>
     </div>
+    <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+              <div class="corousel-item-img">
+                  <img class="d-block w-100" src="assets/Tienda.png" alt="First slide">
+              </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/Icon Leanber Landing.png"  alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="assets/Icon 3 Leanber Landing.png"  alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div> -->
     <section class="proyectos" id="Proyectos">
         <div class="proyectos-container">
             <h2>Nuestros últimos proyectos</h2>
@@ -158,7 +186,7 @@
             </div>
             <div class="proyectos-tarjetas">
                 <p>"Inicie mi negocio de calcetines por<br>
-                    Instagram pero tuve que migrar a mi<br>
+                    Instagram, pero tuve que migrar a mi<br>
                     propia tienda online por la demanda.<br>
                     La mejor desición que puede tomar<br>
                     para mi negocio."<br>
@@ -235,7 +263,7 @@
                 <div class="contacto-img-redes">
                     <a href="https://www.facebook.com/LeanberOficial" class="contacto-link facebook"></a>
                     <a href="https://www.instagram.com/leanber_oficial" class="contacto-link instagram"></a>
-                    <a href="https://twitter.com/home" class="contacto-link twitter"></a>
+                    <a href="https://twitter.com/LeanberOficial" class="contacto-link twitter"></a>
                 </div>
                 <div class="contacto-details2">
                     <p class="contacto-p-links1">
@@ -258,13 +286,14 @@
                 </div>
             </div>
     </section>
-<script>
-    const menu = document.querySelector('.menu');
+
+    <script>
+        const menu = document.querySelector('.menu');
     console.log(menu)
     const burgerbutton = document.querySelector('#burger-menu')
     console.log(burgerbutton);
 
-    burgerbutton.addEventListener('click', hideShow)
+    burgerbutton.addEventListener('click', hideShow);
 
     function hideShow(){
         if(menu.classList.contains('is-active')){
@@ -274,6 +303,7 @@
             menu.classList.add('is-active');
         }
     }
-</script>
+    </script>
+</body>
 </body>
 </html>
