Eliminación de los bordes para detectar el inicio de ccada pantalla y la integración de un target_blank para los link de las redes sociales

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 positivamente al mundo</h4>
             <button><a href="#Contacto">Colaboremos</a></button>
             <div class="hero-img-redes">
-                <a href="https://www.facebook.com/LeanberOficial" class="contacto-link facebook"></a>
-                <a href="https://www.instagram.com/leanber_oficial" class="contacto-link instagram"></a>
-                <a href="https://twitter.com/LeanberOficial" class="contacto-link twitter"></a>
+                <a href="https://www.facebook.com/LeanberOficial" target="_blank" class="contacto-link facebook"></a>
+                <a href="https://www.instagram.com/leanber_oficial" target="_blank" class="contacto-link instagram"></a>
+                <a href="https://twitter.com/LeanberOficial" target="_blank" class="contacto-link twitter"></a>
             </div>
         </div>
         <figure class="hero-img">
@@ -261,9 +261,9 @@
                     <p>Soporte</p>
                 </div>
                 <div class="contacto-img-redes">
-                    <a href="https://www.facebook.com/LeanberOficial" class="contacto-link facebook"></a>
-                    <a href="https://www.instagram.com/leanber_oficial" class="contacto-link instagram"></a>
-                    <a href="https://twitter.com/LeanberOficial" class="contacto-link twitter"></a>
+                    <a href="https://www.facebook.com/LeanberOficial" target="_blank" class="contacto-link facebook"></a>
+                    <a href="https://www.instagram.com/leanber_oficial" target="_blank" class="contacto-link instagram"></a>
+                    <a href="https://twitter.com/LeanberOficial" target="_blank" class="contacto-link twitter"></a>
                 </div>
                 <div class="contacto-details2">
                     <p class="contacto-p-links1">
