--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
                 <nav class="menu is-active">
                     <ol>
                         <li>
-                            <a href="#Inicio">Inicio</a>
+                            <a href="#Inicio" class='header-links'>Inicio</a>
                         </li>
                         <li>
-                            <a href="#Comunidad">Comunidad</a>
+                            <a href="#Comunidad" class='header-links'>Comunidad</a>
                         </li>
                         <li>
-                            <a href="#Servicios">Servicios</a>
+                            <a href="#Servicios" class='header-links'>Servicios</a>
                         </li>
                         <li>
-                            <a href="#Proyectos">Proyectos</a>
+                            <a href="#Proyectos" class='header-links'>Proyectos</a>
                         </li>
                         <li>
-                            <a href="#Contacto">Contacto</a>
+                            <a href="#Contacto" class='header-links'>Contacto</a>
                         </li>
                     </ol>
                 </nav>
@@ -87,93 +87,105 @@
           <h2>Tus ideas disruptivas e innovadoras<br>
               ahora en código</h2>
       </div>
-        <section class="servicios-carousel">
-            <div class="servicios-carousel-items">
-                <div class="servicios-item">
-                    <article class="servicios-article">
-                        <h3>Tiendas virtuales para potenciar<br>
-                            tus ventas online.</h3>
-                      </article>
-                      <article class="servicios-article">
-                          <p><strong>Única para productos únicos</strong><br>
-                            Es momento de introducirte al mercado de<br>
-                            consumo por excelencia de las nuevas<br>
-                            generaciones y adelantarte a tu competencia<br>
-                            para crear comunidad.</p>
-                      </article>
-                </div>
-                <div class="servicios-item">
-                    <div class="servicios-container-img">
-                        <img src="assets/Tienda.png" alt="foto" width="300px">
-                    </div>
-                </div>
-                <div class="servicios-item">
-                    <article class="servicios-article">
-                        <h3>Landing Pages.</h3>
-                      </article>
-                      <article class="servicios-article">
-                          <p><strong>La presencia digital es tu cara al mundo de hoy</strong><br>
-                            No se trata de tener una simple página web<br>
-                            para tener presencia. Ahora se necesita dar<br>
-                            valor dentro de tu contenido sin necesidad<br>
-                            de afectar tus ventas. Los algoritmos serán<br>
-                            tus mejores aliados.</p>
-                      </article>
-                </div>
-                <div class="servicios-item">
-                    <div class="servicios-container-img">
-                        <img src="assets/Icon Leanber Landing.png" alt="foto" width="500px">
-                    </div>
-                </div>
-                <div class="servicios-item">
-                    <article class="servicios-article">
-                        <h3>Algoritmos para el análisis de data</h3>
-                      </article>
-                      <article class="servicios-article">
-                          <p><strong>Automatizar y delegar para un crecimiento exponencial.</strong><br>
-                            Dejemos de utilizar métricas vanidosas que<br>
-                            frenan el crecimiento de nuestra empresa y<br>
-                            digitalecemos una tarea tan importante como<br>
-                            la filtración de datos útiles y claves para<br>
-                            nuestro crecimiento.</p>
-                      </article>
-                </div>
-                <div class="servicios-item">
-                    <div class="servicios-container-img">
-                        <img src="assets/Icon 3 Leanber Landing.png" alt="foto" width="350px">
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
-    <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-              <div class="corousel-item-img">
-                  <img class="d-block w-100" src="assets/Tienda.png" alt="First slide">
+      <div class="carousel_container">
+        <div class="carousel_slide">
+          <div id='lastImg'>
+            <div class="servicios-item">
+              <article class="servicios-article">
+                  <h3>Tiendas virtuales para potenciar<br>
+                      tus ventas online.</h3>
+                </article>
+                <article class="servicios-article">
+                    <p><strong>Única para productos únicos</strong><br>
+                      Es momento de introducirte al mercado de<br>
+                      consumo por excelencia de las nuevas<br>
+                      generaciones y adelantarte a tu competencia<br>
+                      para crear comunidad.</p>
+                </article>
+          </div>
+          </div>
+          <div>
+            <div class="servicios-item">
+              <div class="servicios-container-img">
+                  <img src="assets/Tienda.png" alt="foto" width="300px">
               </div>
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="assets/Icon Leanber Landing.png"  alt="Second slide">
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="assets/Icon 3 Leanber Landing.png"  alt="Third slide">
+          <div> 
+            <div class="servicios-item">
+            <article class="servicios-article">
+                <h3>Landing Pages.</h3>
+              </article>
+              <article class="servicios-article">
+                  <p><strong>La presencia digital es tu cara al mundo de hoy</strong><br>
+                    No se trata de tener una simple página web<br>
+                    para tener presencia. Ahora se necesita dar<br>
+                    valor dentro de tu contenido sin necesidad<br>
+                    de afectar tus ventas. Los algoritmos serán<br>
+                    tus mejores aliados.</p>
+              </article>
+        </div>
+      </div>
+          <div>
+            <div class="servicios-item">
+              <div class="servicios-container-img">
+                  <img src="assets/Icon Leanber Landing.png" alt="foto" width="500px">
+              </div>
+          </div>
+          </div>
+          <div>
+            <div class="servicios-item">
+              <article class="servicios-article">
+                  <h3>Algoritmos para el análisis de data</h3>
+                </article>
+                <article class="servicios-article">
+                    <p><strong>Automatizar y delegar para un crecimiento exponencial.</strong><br>
+                      Dejemos de utilizar métricas vanidosas que<br>
+                      frenan el crecimiento de nuestra empresa y<br>
+                      digitalecemos una tarea tan importante como<br>
+                      la filtración de datos útiles y claves para<br>
+                      nuestro crecimiento.</p>
+                </article>
+          </div>
+          </div>
+          <div>
+            <div class="servicios-item">
+              <div class="servicios-container-img">
+                  <img src="assets/Icon 3 Leanber Landing.png" alt="foto" width="350px">
+              </div>
+          </div>
+          </div>
+          <div>
+            <div class="servicios-item">
+              <article class="servicios-article">
+                  <h3>Tiendas virtuales para potenciar<br>
+                      tus ventas online.</h3>
+                </article>
+                <article class="servicios-article">
+                    <p><strong>Única para productos únicos</strong><br>
+                      Es momento de introducirte al mercado de<br>
+                      consumo por excelencia de las nuevas<br>
+                      generaciones y adelantarte a tu competencia<br>
+                      para crear comunidad.</p>
+                </article>
+          </div>
+          </div>
+          <div  id='firstImg'>
+            <div class="servicios-item">
+              <div class="servicios-container-img">
+                  <img src="assets/Tienda.png" alt="foto" width="300px">
+              </div>
+          </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div> -->
+        <button id="prevBtn">
+          <img src="/assets/arrow.svg" alt="arrow" />
+        </button>
+        <button id="nextBtn">
+          <img src="/assets/arrow.svg" alt="arrow" />
+        </button>
+      </div>
+    </div>
     <section class="proyectos" id="Proyectos">
         <div class="proyectos-container">
             <h2>Nuestros últimos proyectos</h2>
@@ -276,11 +288,11 @@
                 </div>
                 <div class="contacto-details2">
                     <p class="contacto-p-links1">
-                        Inicio<br>
-                        Comunidad<br>
-                        Servicios<br>
-                        Proyectos<br>
-                        Contacto
+                        <a href="#Inicio" class='footer-links'>Inicio</a><br>
+                        <a href="#Comunidad" class='footer-links'>Comunidad</a><br>
+                        <a href="#Servicios" class='footer-links'>Servicios</a><br>
+                        <a href="#Proyectos" class='footer-links'>Proyectos</a><br>
+                        <a href="#Contacto" class='footer-links'>Contacto</a>
                     </p>
                 </div>
                 <div class="contacto-details2">
