[Modified] polish carousel responsiveness, and changed layout, added startup animation, added astronaut animation, polished overall responsiveness

--- a/index.html
+++ b/index.html
@@ -51,39 +51,39 @@
     </div>
     <section class="hero" id="Inicio">
       <div class="hero-text">
-        <h1>
+        <h1 class='elementToAnimateOnStart'>
           Sé el cambio innovador que<br />
           quieres ver en el mundo
         </h1>
-        <h4>
+        <h4 class='elementToAnimateOnStart'>
           Cuenta con nosotros para impactar<br />
           positivamente al mundo
         </h4>
-        <a href="#Contacto"> <button>Colaboremos</button></a>
+        <a href="#Contacto" class='elementToAnimateOnStart'> <button>Colaboremos</button></a>
         <div class="hero-img-redes">
           <a
             href="https://www.facebook.com/LeanberOficial"
             target="_blank"
             rel="noopener noreferrer"
-            class="contacto-link facebook"
+            class="contacto-link facebook elementToAnimateOnStart"
           ></a>
           <a
             href="https://www.instagram.com/leanber_oficial"
             target="_blank"
             rel="noopener noreferrer"
-            class="contacto-link instagram"
+            class="contacto-link instagram elementToAnimateOnStart"
           ></a>
           <a
             href="https://twitter.com/LeanberOficial"
             target="_blank"
             rel="noopener noreferrer"
-            class="contacto-link twitter"
+            class="contacto-link twitter elementToAnimateOnStart"
           ></a>
         </div>
       </div>
       <!-- <figure class="hero-img"> -->
       <img
-        class="hero-img-serv"
+        class="hero-img-serv hero-img-redes elementToAnimateOnStart"
         src="assets/SERV.png"
         width="550px"
         alt="imagen principal"
