slight change on hero text and image route of app design

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
           <p>UX/UI de App Galery</p>
         </div>
         <div class="proyectos-img3">
-          <img src="./assets/diseño_app.png" alt="diseñoApp" />
+          <img src="./assets/diseno_app.png" alt="diseñoApp" />
         </div>
         <div class="proyectos-tarjetas">
           <p>
