changed services text

--- a/index.html
+++ b/index.html
@@ -172,11 +172,8 @@
               </article>
               <article class="servicios-article">
                 <p>
-                  <strong>Única para productos únicos</strong><br />
-                  Experiencia única para productos únicos. Es momento de
-                  introducirte al mercado por excelencia de las nuevas
-                  generaciones y adelantarte a tu competencia para crear tu
-                  comunidad.
+                  <strong>Experiencia única para productos únicos</strong><br />
+                  Es momento de introducirte al mercado por excelencia de las nuevas generaciones y adelantarte a tu competencia para crear tu comunidad.
                 </p>
               </article>
             </div>
@@ -199,10 +196,7 @@
                   <strong
                     >La presencia digital es tu cara al mundo de hoy</strong
                   ><br />
-                  No se trata de tener una simple página web para tener
-                  presencia, ahora se necesita dar valor dentro de tu contenido
-                  sin necesidad de afectar las ventas. Los algoritmos son
-                  nuestros aliados para ello.
+                  No se trata de tener una simple página web para tener presencia, ahora se necesita dar valor dentro de tu contenido sin necesidad de afectar las ventas. Los algoritmos son nuestros aliados para ello.
                 </p>
               </article>
             </div>
@@ -217,16 +211,13 @@
                 />
               </div>
               <article class="servicios-article">
-                <h3>Inteligencia artificial</h3>
+                <h3>Integración de algoritmos</h3>
               </article>
               <article class="servicios-article">
                 <p>
-                  <strong>Llega a esos lugares que jamás imaginaste</strong
+                  <strong>Automatizar y delegar para un crecimiento exponencial</strong
                   ><br />
-                  Las personas estana en espera de conocer tu comida y saber
-                  llegar a ellas es fundamental para expandir tu restaurante a
-                  más lugares. En Leanber tenemos las herramientas de algoritmos
-                  imtegrados para crecer de manera órganica.
+                  Dejemos de frenar nuestro crecimiento por no integrar y robustecer nuestro negocio con software que nos permita ser más eficientes y que su escalibilidad no dependa de tu presencia.
                 </p>
               </article>
             </div>
@@ -243,11 +234,8 @@
               </article>
               <article class="servicios-article">
                 <p>
-                  <strong>Única para productos únicos</strong><br />
-                  Experiencia única para productos únicos. Es momento de
-                  introducirte al mercado por excelencia de las nuevas
-                  generaciones y adelantarte a tu competencia para crear tu
-                  comunidad.
+                  <strong>Experiencia única para productos únicos</strong><br />
+                  Es momento de introducirte al mercado por excelencia de las nuevas generaciones y adelantarte a tu competencia para crear tu comunidad.
                 </p>
               </article>
             </div>
@@ -270,10 +258,7 @@
                   <strong
                     >La presencia digital es tu cara al mundo de hoy</strong
                   ><br />
-                  No se trata de tener una simple página web para tener
-                  presencia, ahora se necesita dar valor dentro de tu contenido
-                  sin necesidad de afectar las ventas. Los algoritmos son
-                  nuestros aliados para ello.
+                  No se trata de tener una simple página web para tener presencia, ahora se necesita dar valor dentro de tu contenido sin necesidad de afectar las ventas. Los algoritmos son nuestros aliados para ello.
                 </p>
               </article>
             </div>
